# rust-trader

./: .gitignore
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
kraken-auto-trader/: Cargo.toml
kraken-auto-trader/src/: errors.rs  lib.rs  main.rs  middleware.rs
kraken-auto-trader/src/api/: handlers.rs  mod.rs
kraken-auto-trader/src/client/: kraken_apis.rs  kraken_client.rs  mod.rs  rate_limit.rs
kraken-auto-trader/src/models/: account.rs  funding.rs  market.rs  mod.rs  trading.rs
kraken-auto-trader/src/services/: account_details.rs  market_data.rs  mod.rs
kraken-auto-trader/src/utils/: config.rs  crypto.rs  endpoints.rs  mod.rs
kraken-auto-trader/tests/: integration_tests.rs
