[package]
name = "kraken-auto-trader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.10.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1.44.1", features = ["full"] }
dotenv = "0.15"
env_logger = "0.11.7"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22.1"
thiserror = "2.0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
config = "0.15.11"